<resources>
    <string name="app_name">ANDE-MUNCH</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Party</string>
    <string name="title_notifications">Explore</string>

    <!-- Party Strings -->
    <string name="party_title">Party Feature</string>
    <string name="create_party">Create Party</string>
    <string name="join_party">Join Party</string>

    <!-- Login Strings -->
    <string name="page_title">Login</string>
    <string name="logout_title">Logout</string>

    <string name="default_web_client_id" translatable="false">728293663830-dmhbef8i0gdtnqt9jmru4cokhnkmn1ev.apps.googleusercontent.com</string>
    <string name="welcomeText">What would you like to eat today?</string>
    <string name="searchHintText">Search for restaurants...</string>
    <string name="profileButtonText">profile settings button</string>

    <!-- Filter Page Strings -->
    <string name="chinese_cuisine_title">Chinese</string>
    <string name="malay_cuisine_title">Malay</string>
    <string name="indian_cuisine_title">Indian</string>
    <string name="japanese_cuisine_title">Japanese</string>
    <string name="korean_cuisine_title">Korean</string>
    <string name="western_cuisine_title">Western</string>
    <string name="mexican_cuisine_title">Mexican</string>
    <string name="Italian_cuisine_title">Italian</string>
    <string name="cake_cuisine_title">Cake</string>
    <string name="bbq_cuisine_title">BBQ</string>
    <string name="fastFood_cuisine_title">Fast Food</string>
    <string name="thai_cuisine_title">Thai</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBwX0rW5nkKzcKetn9vZETiJaQnoPdaoEk</string>

    <!-- Profile Page -->
    <string-array name="dietary_options">
        <item>None</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>
    <string name="profile_image">Profile Image</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="dietary_restrictions">Dietary Restrictions</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="back">&lt;</string>
    <string name="description">Description</string>
</resources>